# ocr_license_plate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: ocr_model_test.ipynb  ocr_model_train.ipynb
